# logdog

./: .editorconfig  .gitignore  AGENTS.md  LICENSE  README.md
src/server/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
src/server/LogParser/: LogParser.csproj
src/server/docs/: unstructured-parser.md
src/server/lib/: ai.py  database.py  database_swarm.py  log_swarm.py  models.py  preprocessor.py  storage.py  unstructured_parser.py
src/server/lib/parsers/: contracts.py  orchestrator.py  preprocessor.py  registry.py  unified.py  unstructured_parser.py
src/server/routes/: auth.py  log_pipeline.py  logs.py  parser.py  stats.py
src/server/routes/LogParser/: Program.cs
src/server/scripts/: _analyze_bins.py  extract_pdf_logs.py  generate_hybrid_logs.py  generate_synthetic_semi.py  generate_unstructured_logs.py  test_e2e_unstructured.py
src/server/src/: environment.py  main.py
src/server/src/lib/: ai.py  auth.py  database.py  database_swarm.py  megabase.py  models.py  storage.py  utils.py
src/server/src/parsers/: PARSING_ARCHITECTURE.md  __init__.py  ai.py  ai_wrappers.py  contracts.py  deterministic.py  few_shot_store.py  llm_contracts.py  llm_engine.py  log_profiles.yaml  normalization.py  orchestrator.py  preprocessor.py  profiles.py  quality.py  registry.py  (+1 more)
src/server/tests/: conftest.py  test_megabase.py  test_orchestrator_archives_and_routing.py  test_parser_registry.py  test_parser_routing.py  test_preprocessor.py  test_preprocessor_cache.py  test_structured_regressions.py  test_unified_pipeline.py  test_unstructured_parser.py
(+254 files in other folders)
