[project]
name = "logdog-server"
version = "1.0.0"
requires-python = ">=3.12,<3.14"
dependencies = [
  "bcrypt",
  "boto3",
  "chardet",
  "drain3",
  "fastapi[standard]",
  "langchain-openrouter",
  "psycopg2-binary",
  "pydantic>=2.0.0,<2.12",
  "python-dotenv",
  "python-jose[cryptography]",
  "sqlalchemy",
  "uvicorn",
]

[dependency-groups]
dev = ["ruff>=0.15.9"]

[tool.ruff]
line-length = 120
